2013-10-31 Frederic GOYER  <frederic.goyer@plan-net.fr>
	* Check device for autoplay attribute of video tag
	
2013-10-24 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Add default simplegallery css to adapt image with at gallery width
	
2013-08-02 Guillaume GERMAIN <guillaume.germain@plan-net.fr>
	* Add configurations for simplegallery
	
2013-06-03 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Add lightbox keyboard navigation
	
2013-04-22 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Add description field to lightbox

2013-04-19 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Remove isotope Sortby random => not compatibility with lightbox order
	
2013-04-18 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Use Isotope library to masonry theme
	
2013-04-15 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Add possibility to change image title tag
	
2013-04-05 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Add infinitescroll to Masonry theme
	* Refactoring Masonry JS
	
2013-03-15 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Add hook to tx_pnfgallery_pi1->getMarkersBase
	* Add hook to tx_pnfgallery_dam class
	* Add DAM source configuration: subdirectories, order
	* Activate multilanguage at DAM source
	* Change extension author and dependency
	* Add new theme based of jQuery Masonry
	* Improvement in PnfGalleryLightbox class javascript: 
		- return current obj for add possibility to use later (reload images list for example)
		- configure lightbox content line-height for add possibility to center image 
		- new option: configure other container of lightbox div (default body)
	* Version changed to 0.1.0

2013-03-11 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Version changed to 0.0.1

2013-02-22 Guillaume Germain <guillaume.germain@plan-net.fr>
	* Fix: Usage of PHP short open tags.

2013-02-22 Guillaume Germain <guillaume.germain@plan-net.fr>
	* Bug Fix: Added empty item in plugin source field to allow form reloading when selecting a valid value 
