@@ -1,3 +1,6 @@
+2014-01-20 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
+	* Change lightbox size for mobile and tablet
+
 2013-10-31 Frederic GOYER  <frederic.goyer@plan-net.fr>
 	* Check device for autoplay attribute of video tag
 	
